assigns correct color to sign out link on mobile and desktop screen sizes based on comps in zeplin

--- a/src/components/MilMoveHeader/index.module.scss
+++ b/src/components/MilMoveHeader/index.module.scss
@@ -85,7 +85,7 @@
         display: flex;
         align-items: center;
         align-self: stretch;
-        color: $link-light;
+        color: #fff;
         font-weight: normal;
         border-top: 4px solid transparent;
         border-bottom: 4px solid transparent;
@@ -102,6 +102,7 @@
         }
 
         @include at-media(tablet) {
+          color: $link-light;
           font-weight: bold;
         }
 
